<resources>
    <string name="app_name">RTLion</string>
    <string name="app_desc">Multipurpose RTL-SDR Framework</string>
    <string name="author">.k3</string>
    <string name="app_desc_long">RTLion Framework</string>
    <string name="page_main">Main</string>
    <string name="page_settings">Settings</string>
    <string name="page_graph">Graph</string>
    <string name="page_scanner">Scanner</string>
    <string name="prev_page">&lt;</string>
    <string name="next_page">&gt;</string>
    <string name="first_page">1</string>
    <string name="server_disconnected">[-] Status: Not connected.</string>
    <string name="server_connecting">[~] Status: Connecting&#8230;</string>
    <string name="server_connected">[#] Status: Connected.</string>
    <string name="host_addr">Host:Port</string>
    <string name="try_connect">Connect</string>
    <string name="invalid_host">Invalid host or port.</string>
    <string name="server_unreachable">Could not reach RTLion server.</string>
    <string name="connection_warning">You must connect to RTLion server first.</string>
    <string name="swipe_text">&lt; Swipe to see RTLion features. &gt;</string>
    <string name="dev_index">Device Index</string>
    <string name="samp_rate">Sample Rate</string>
    <string name="dev_gain">Device Gain</string>
    <string name="save_settings">Save Settings</string>
    <string name="settings_info">General device settings listed.</string>
    <string name="invalid_server_settings">Invalid server settings detected.</string>
    <string name="settings_save_error">Error occurred while saving settings.</string>
    <string name="settings_updated">Device settings updated.</string>
    <string name="create_graph">Create FFT Graph</string>
    <string name="graph_error">Unable to get FFT graph data.</string>
    <string name="center_freq">Center Frequency</string>
    <string name="num_read">Number of the reads</string>
    <string name="interval">Interval between reads</string>
    <string name="invalid_args">Invalid command-line arguments.</string>
    <string name="invalid_freq">Invalid center frequency value.</string>
    <string name="invalid_settings">Invalid settings detected.</string>
    <string name="save_error">Unable to save settings.</string>
    <string name="stop_graph">Stop</string>
    <string name="graph_wait">Waiting&#8230;</string>
    <string name="freq_min">Min. Frequency</string>
    <string name="freq_max">Max. Frequency</string>
    <string name="start_scan">Start Scan</string>
    <string name="sensivity">Sensivity</string>
    <string name="invalid_dbvals">Invalid dB values.</string>
    <string name="clipboard_copy">Copied to clipboard.</string>
    <string name="framework_busy">RTLion Framework is busy.</string>
    <string name="app_restart">Restarting Framework&#8230;</string>
    <string-array name="info_names">
        <item>Browser Fingerprint</item>
        <item>Browser</item>
        <item>OS</item>
        <item>Screen</item>
        <item>Timezone</item>
        <item>Language</item>
    </string-array>
    <string-array name="freq_options">
        <item>Copy</item>
        <item>Show Graph</item>
    </string-array>
</resources>
